[project]
name = "python-sample-code"
version = "0.0.1"
authors = [
    { name="Shun Huang", email="shun@formosa1544.com" }
]
description = "The Python sample project is a Binary Tree Library"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]
keywords = ["sphinx"]


[project.urls]
repository = "https://github.com/burpeesDaily/python-sample-code"


[project.scripts]
tree-cli = "trees.bin.tree_cli:main"
